--- a/index.html
+++ b/index.html
@@ -41,8 +41,15 @@
 					<section class="feature left">
 						<a href="#" class="image icon solid fa-signal"><img src="images/pic01.jpg" alt="" /></a>
 						<div class="content">
-							<h3>The First Thing</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+							<h3><u>Theme<u/></h3>
+							<p>This workshop will focus on the application of Bayesian Networks (BNs) to count data originating from next-generation sequencing experiments. The following specific topics will be addressed: </p>
+							<br>
+							<ol class="default">
+								<li>Introduction to Bayesian statistics and probabilistic models</li>
+								<li>Comparative discussion of BNs packages in R</li>
+								<li>Generating and testing hypotheses using BNs</li>
+								<li>Applications of BNs to metabolomic and microbiome data</li>
+							</ol>
 							<hr>
 						</div>
 					</section>
