--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<section class="feature left">
 						<a href="#" class="image icon solid fa-signal"><img src="images/pic01.jpg" alt="" /></a>
 						<div class="content">
-							<h3><u>Theme<u/></h3>
+							<h3><u>Theme</h3><u/>
 							<p>This workshop will focus on the application of Bayesian Networks (BNs) to count data originating from next-generation sequencing experiments. The following specific topics will be addressed: </p>
 							<br>
 							<ol class="default">
