--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 							<h3><u>Theme</u></h3>
 							<p>This workshop will focus on the application of Bayesian Networks (BNs) to count data originating from next-generation sequencing experiments. The following specific topics will be addressed: </p>
 							<br>
-							<ol class="default">
+							<ul class="default">
 								<li>Introduction to Bayesian statistics and probabilistic models</li>
 								<li>Comparative discussion of BNs packages in R</li>
 								<li>Generating and testing hypotheses using BNs</li>
 								<li>Applications of BNs to metabolomic and microbiome data</li>
-							</ol>
+							</ul>
 							<hr>
 						</div>
 					</section>
