--- a/index.html
+++ b/index.html
@@ -56,16 +56,20 @@
 					<section class="feature right">
 						<a href="#" class="image icon solid fa-code"><img src="images/pic02.jpg" alt="" /></a>
 						<div class="content">
-							<h3>The Second Thing</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+							<h3>Target Audience</h3>
+							<p>Undergraduates,graduate students and postdocs with an interest in learning about Bayesian statistics and applying Bayesian Networks to microbiome data.</p>
 							<hr>
 						</div>
 					</section>
 					<section class="feature left">
 						<a href="#" class="image icon solid fa-mobile-alt"><img src="images/pic03.jpg" alt="" /></a>
 						<div class="content">
-							<h3>The Third Thing</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+							<h3>Organizer(s)</h3>
+							<p><ul class="default">
+								<li>Breanna Shi</li><img src="placeholder.png" border="2">
+								<li>Christoper Dean</li><img src="placeholder.png" border="2">
+								<li>Jesse Elder</li><img src="placeholder.png" border="2">
+							</ul></p>
 							<hr>
 						</div>
 					</section>
