--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
 			<div id="header">
 				<span class="logo icon fa-paper-plane"></span>
 				<h1>Bayesian Network Page Title</h1>
-				<p>A responsive HTML5 + CSS3 site template designed by <a href="http://html5up.net">HTML5 UP</a>
+				<p>wow look at this text and also a <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">LINK TO SOMETHING</a>
 				<br />
-				and released for free under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
+				whoop de doop more text and also a  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a>.</p>
 			</div>
 
 		<!-- Main -->
 			<div id="main">
 
 				<header class="major container medium">
-					<h2>We conduct experiments that
+					<h2>Line A of ths
 					<br />
-					may or may not seriously
+					line two of this
 					<br />
-					break the universe</h2>
+					line 3 of this</h2>
 					<!--
 					<p>Tellus erat mauris ipsum fermentum<br />
 					etiam vivamus nunc nibh morbi.</p>
