--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 						<hr>
 					</section>
 					
-					<section class="feature center">
+					<section class="feature middle">
 					<header>
 							<h3>Organizer(s)</h3>
 						</header>
