--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
 					</section>
 					
 					<section class="feature middle">
-					<header>
+						<div class="content">
+					<header> 
 							<h3>Organizer(s)</h3>
 						</header>
 						<p><ul class="default">
@@ -134,6 +135,7 @@
 							<li>Jesse Elder</li><img src="placeholder.png" border="2">
 						</ul></p>
 					<hr>
+						</div>
 					</section>
 					
 					<section>
