--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
 						<hr>
 					</section>
 					
-					<section class="feature middle">
-						<div class="content">
+					<section class="feature center">
 					<header> 
 							<h3>Organizer(s)</h3>
 						</header>
@@ -135,7 +134,6 @@
 							<li>Jesse Elder</li><img src="placeholder.png" border="2">
 						</ul></p>
 					<hr>
-						</div>
 					</section>
 					
 					<section>
