--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@
 					<header> 
 							<h3>Organizer(s)</h3>
 						</header>
-						<p style="text-align:center;"><ul class="default">
+						<p style="text-align:center;">
+						some text for reference
+						<ul class="default" style="text-align:center;">
 							<li>Breanna Shi</li><img src="placeholder.png" border="2">
 							<li>Christoper Dean</li><img src="placeholder.png" border="2">
 							<li>Jesse Elder</li><img src="placeholder.png" border="2">
