--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
 							<h3>Organizer(s)</h3>
 						</header>
 						<p style="text-align:center;">
-							Breanna Shi<br><img src="images/placeholder.png"><br>
-							Christoper Dean<br><img src="images/placeholder.png"><br>
-							Jesse Elder<br><img src="images/placeholder.png"><br>
+							Breanna Shi<br><img src="images/bree.png"><br>
+							Christoper Dean<br><img src="images/chris.png"><br>
+							Jesse Elder<br><img src="images/jesse.png"><br>
 						</p>
 					<hr>
 					</section>
