--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 						<p style="text-align:center;">
 							Breanna Shi<br><img src="images/bree.png"><br>
 							Christoper Dean<br><img src="images/chris.png"><br>
-							Jesse Elder<br><img src="images/jesse.png"><br>
+							Jesse Elder<br><img src="images/JesseLizard.png"><br>
 						</p>
 					<hr>
 					</section>
