--- a/index.html
+++ b/index.html
@@ -126,13 +126,13 @@
 					
 					<section>
 					<header> 
-							<h3>Organizer(s)</h3>
-						</header>
-						<p style="text-align:center;">
-							Breanna Shi<br><img src="images/bree.png"><br>
-							Christoper Dean<br><img src="images/chris.png"><br>
-							Jesse Elder<br><img src="images/JesseLizard.png"><br>
-						</p>
+						<h3>Organizer(s)</h3>
+					</header>
+					<p style="text-align:center;">
+						<header>Breanna Shi</header><br><img src="images/bree.png"><br>
+						<header>Christoper Dean</header><br><img src="images/chris.png"><br>
+						<header>Jesse Elder</header><br><img src="images/JesseLizard.png"><br>
+					</p>
 					<hr>
 					</section>
 					
