--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
 						<h3>Organizer(s)</h3>
 					</header>
 					<p style="text-align:center;">
-						<header>Breanna Shi</header><br><img src="images/bree.png"><br>
-						<header>Christoper Dean</header><br><img src="images/chris.png"><br>
-						<header>Jesse Elder</header><br><img src="images/JesseLizard.png"><br>
+						Breanna Shi<br><img src="images/bree.png"><br><br>
+						Christoper Dean<br><img src="images/chris.png"><br><br>
+						Jesse Elder<br><img src="images/JesseLizard.png"><br><br>
 					</p>
 					<hr>
 					</section>
