--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Bayesian Networks</title>
+		<title>Microbiome Application For Bayesian Statistics</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<div id="header">
 				<!--<span class="logo icon fa-paper-plane"></span>-->
-				<h1>Bayesian Network Page Title</h1>
+				<h1>Microbiome Application For Bayesian Statistics</h1>
 				<p>wow look at this text and also a <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">LINK TO SOMETHING</a>
 				<br />
 				whoop de doop more text and also a  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a>.</p>
@@ -104,14 +104,16 @@
 						<!--<header>
 							<h3>Theme</h3>
 						</header>-->
-						<p>This workshop will focus on the application of Bayesian Networks (BNs) to count data originating from next-generation sequencing experiments. The following specific topics will be addressed: </p>
-						<br>
+						<header>This workshop will focus on the application of Bayesian Networks (BNs) to count data originating from next-generation sequencing experiments. The following specific topics will be addressed: </p>
+						</header>
+						<p>
 						<ul class="default">
 							<li>Introduction to Bayesian statistics and probabilistic models</li>
 							<li>Comparative discussion of BNs packages in R</li>
 							<li>Generating and testing hypotheses using BNs</li>
 							<li>Applications of BNs to metabolomic and microbiome data</li>
 						</ul>
+						<p>
 						<hr>
 					</section>
 					
